--- a/include/png.html
+++ b/include/png.html
@@ -37,9 +37,9 @@ for ( var i=0; i<100; ++i )
 s += "<div>";
 if ( page > 1 )
 {
-	s += "<a href='page.html?page=" + (page-1) + "'><h1>上一页</h1></a>&nbsp; ";
+	s += "<a href='png.html?page=" + (page-1) + "'><h1>上一页</h1></a>&nbsp; ";
 }
-s += "<a href='page.html?page=" + (page+1) + "'><h1>下一页</h1></a>";
+s += "<a href='png.html?page=" + (page+1) + "'><h1>下一页</h1></a>";
 s += "</div>";
 ele.innerHTML = s;
 </script>
